--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,8 +70,15 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    implementation 'com.android.support:customtabs:27.1.1'
+    implementation 'com.android.support:customtabs:28.0.0-rc01'
 
     implementation 'com.github.bumptech.glide:glide:4.5.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.5.0'
+
+    implementation "io.reactivex.rxjava2:rxjava:2.2.0"
+
+    compileOnly 'com.google.auto.value:auto-value:1.5.2'
+    annotationProcessor 'com.google.auto.value:auto-value:1.5.2'
+    annotationProcessor 'com.ryanharter.auto.value:auto-value-parcel:0.2.5'
+    implementation 'com.squareup.sqlbrite3:sqlbrite:3.2.0'
 }
