--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -31,6 +32,10 @@
 
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".moudle.img.grid.ImgGridActivity"
             android:screenOrientation="portrait" />
 
     </application>
