--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,7 @@ dependencies {
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.0"
 
+    implementation 'android.arch.persistence:db-framework:1.1.1'
     compileOnly 'com.google.auto.value:auto-value:1.5.2'
     annotationProcessor 'com.google.auto.value:auto-value:1.5.2'
     annotationProcessor 'com.ryanharter.auto.value:auto-value-parcel:0.2.5'
